# python-frontmatter

./: .gitignore  .pipignore  .travis.yml  LICENSE  MANIFEST.in  README.md  frontmatter.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
docs/: Makefile  api.rst  basics.rst  conf.py  handlers.rst  index.rst  make.bat
examples/: pandoc.py  reversed.py  sorted.py
examples/content/: pandoc.txt  reversed.txt  sorted.txt
frontmatter/: __init__.py  conftest.py  default_handlers.py  util.py
tests/: chinese.txt  dots.markdown  extra-dash.txt  hello-markdown.markdown  hello-toml.markdown  hello-world.markdown  network-diagrams.markdown  stub_tests.py  test_docs.py  test_files.py  unit_test.py
tests/empty/: empty-frontmatter.result.json  empty-frontmatter.txt  no-frontmatter.result.json  no-frontmatter.txt
tests/json/: hello-json.md  hello-json.result.json
tests/toml/: hello-toml.md  hello-toml.result.json
tests/yaml/: chinese.result.json  chinese.txt  content-key.md  content-key.result.json  extra-dash.result.json  extra-space.result.json  extra-space.txt  hello-markdown.md  hello-markdown.result.json  hello-world.result.json  hello-world.txt  network-diagrams.md  network-diagrams.result.json  unpretty.md  unpretty.result.json
