[project]
name = "python-frontmatter"
version = "1.3.0"
description = "Parse and manage posts with YAML (or other) frontmatter"
readme = "README.md"
authors = [{ name = "Chris Amico", email = "eyeseast@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["PyYAML"]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["frontmatter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.urls]
repository = "https://github.com/eyeseast/python-frontmatter"
issues = "https://github.com/eyeseast/python-frontmatter/issues"
documentation = "http://python-frontmatter.rtfd.io"

[project.optional-dependencies]
test = ["pytest", "toml", "pyaml", "mypy", "types-PyYAML", "types-toml"]
docs = ["sphinx"]
toml = ["toml"]

[dependency-groups]
dev = [
    "pytest",
    "toml",
    "pyaml",
    "mypy",
    "types-PyYAML",
    "types-toml",
    "sphinx",
]


[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "frontmatter"
